# SMART-MCP-SERVER-LLM

./: README.md  main.py  package-lock.json  package.json  pyproject.toml  requirements.txt  web_server.py
agents/: __init__.py  github_agent.py  jira_agent.py  slack_agent.py  teams_agent.py  telegram_agent.py
lib/: __init__.py  base_agent.py  base_commands.py  base_mcp.py  base_transport.py  state.py  utils.py
llm_providers/: __init__.py  gemini.py  groq_llm.py  lightning_llm.py  openai.py
scratch/: debug_github.py  test_private_attr.py  test_web.py
tests/: test_env_validation.py  test_teams_agent.py
web/: index.html
